# text_analysis

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  devskim.yml  rust-clippy.yml  rust.yml
src/: lib.rs  main.rs  office.rs
tests/: office parsing.rs  office_parsing.rs  tests.rs
