[package]
name = "text_analysis"
version = "0.4.7"
authors = [
    "ArdentEmpiricist <35100899+ArdentrEmpiricist@users.noreply.github.com>",
]
edition = "2024"
description = "A robust multilingual text analysis CLI with context, N-grams, named entities, and CSV/JSON export."
readme = "README.md"
homepage = "https://crates.io/crates/text_analysis"
documentation = "https://docs.rs/text_analysis/"
repository = "https://github.com/LazyEmpiricist/text_analysis"
keywords = [
    "statistics",
    "word-analysis",
    "parsing",
    "text-processing",
    "science",
]
categories = ["command-line-utilities", "parsing", "text-processing", "science"]
license = "MIT OR Apache-2.0"

[lib]
name = "text_analysis"
path = "src/lib.rs"

[[bin]]
name = "text_analysis"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whatlang = "0.16.4"
chrono = "0.4.41"
pdf-extract = "0.9.0"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
rust-stemmers = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.1"
rayon = "1.11"


[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
serde_json = "1"
regex = "1"
serial_test = "3"
